# InvestorClaude

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  DISCOVERY_HIERARCHY.md  INSTALL_FLOW.md  PRIVACY.md  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
commands/: ask.md  refresh.md
config/: llm-providers.yaml  model-recommendations.yaml
deferred-commands/: portfolio-dashboard.md
harness/: CLAUDE_CODE_TEXT_HARNESS.md  reset-claude-test-host.sh
harness/cobol/: cobol-barrage.sh  parse_stream_json.py  test_parse_stream_json.py
skills/investorclaude/: SKILL.md
